--- a/core/components/ajaxform/docs/changelog.txt
+++ b/core/components/ajaxform/docs/changelog.txt
@@ -1,5 +1,9 @@
 Changelog for AjaxForm.
 
+1.0.0-rc
+==============
+- Force attribute "method=post" to form.
+
 1.0.0-beta1
 ==============
 - Improved adding class "ajax_form" to form.
