--- a/core/components/ajaxform/docs/changelog.txt
+++ b/core/components/ajaxform/docs/changelog.txt
@@ -1,5 +1,9 @@
 Changelog for AjaxForm.
 
+1.0.2-pl
+==============
+- [#4] Ability to use @INLINE chunk in parameter &form, if you have pdoTools installed.
+
 1.0.1-pl
 ==============
 - Possibly fix for Error 500 on some hosts.
