--- a/core/components/ajaxform/docs/changelog.txt
+++ b/core/components/ajaxform/docs/changelog.txt
@@ -4,6 +4,7 @@ Changelog for AjaxForm.
 ==============
 - [#4] Ability to use @INLINE chunk in parameter &form, if you have pdoTools installed.
 - [#3] Ability to set placeholders in form by specifying them into script parameters.
+- [#2] Script will add class "error" to elements with ".error_[name_of_field]" elements in form.
 
 1.0.1-pl
 ==============
