Improved compatibility with parameter "submitVar" in snippet FormIt

--- a/core/components/ajaxform/docs/changelog.txt
+++ b/core/components/ajaxform/docs/changelog.txt
@@ -3,6 +3,7 @@ Changelog for AjaxForm.
 1.1.0-pl
 ==============
 - [#8] Improved regular expression.
+- Improved compatibility with parameter "submitVar" in snippet FormIt.
 
 1.0.2-pl
 ==============
