--- a/core/components/ajaxform/docs/changelog.txt
+++ b/core/components/ajaxform/docs/changelog.txt
@@ -1,5 +1,9 @@
 Changelog for AjaxForm.
 
+1.0.4-pl
+==============
+- Added checking of global js var "afValidated" before form submit.
+
 1.0.3-pl
 ==============
 - [#8] Improved regular expression.
