--- a/core/components/ajaxform/docs/changelog.txt
+++ b/core/components/ajaxform/docs/changelog.txt
@@ -1,5 +1,11 @@
 Changelog for AjaxForm.
 
+1.1.5-pl
+==============
+- [#30] Improved support of ReCaptcha.
+- PSR-2.
+- Default chunk optimized for Twitter Bootstrap 3.
+
 1.1.4-pl
 ==============
 - [#27] Support of single quotes in attributes of form.
